# news_search

./: .gitignore  Makefile  app.py  establish_index.py  fastapi_app.py  main.py  pyproject.toml  query_index.py  readme.md  requirements.txt
.azure/: config
src/: util.py
