[tool.poetry]
name = "news-search"
version = "0.1.0"
description = ""
authors = ["steven <stevenvuong96@gmail.com>"]
readme = "README.md"
packages = [{include = "news_search"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
pinecone-client = "^2.2.1"
python-dotenv = "^1.0.0"
black = "^23.3.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
langchain = "^0.0.146"
openai = "^0.27.4"
tiktoken = "^0.3.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
